--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="grid">
 
-                        <form action="https://github.com/Swtcandieg" method="POST" class="form login">
+                        <form action="https://www.youtube.com" method="POST" class="form login">
 
                             <div class="form__field">
                                 <label for="login__username"><svg class="icon">
