--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!--Links-->
     <!--CSS LINK-->
-    <link rel="stylesheet" href="Login Form/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <!--Font Links-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
